--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "bin": {
     "lintbase": "./dist/index.js"
   },
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "echo \"No linter configured yet\""
+    "prepublishOnly": "npm test && npm run build"
   },
   "keywords": [
     "lintbase",
@@ -20,10 +27,20 @@
     "nosql",
     "database",
     "lint",
-    "cli"
+    "cli",
+    "schema",
+    "security"
   ],
   "author": "Mamadou Dia",
-  "license": "ISC",
+  "license": "MIT",
+  "homepage": "https://lintbase.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lintbase/lintbase.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lintbase/lintbase/issues"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
