--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x] # Test against current and LTS node versions
+        node-version: [18.x, 20.x]
 
     steps:
     - name: Checkout repository
@@ -25,10 +25,12 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      # Use npm install (not ci) so npm resolves platform-specific optional
+      # deps (e.g. @rollup/rollup-linux-x64-gnu) correctly on the CI runner.
+      run: npm install
 
-    - name: Build
-      run: npm run build
+    - name: Build lintbase CLI
+      run: npm run build --workspace=packages/lintbase
 
     - name: Run Tests
-      run: npm test
+      run: npm run test --workspace=packages/lintbase
