chore: add MCP registry server.json + bump lintbase-mcp to v0.1.2
- Add server.json for official MCP registry (registry.modelcontextprotocol.io)
- Add mcpName field to package.json for registry verification
- Published as io.github.Madia333/lintbase-mcp

--- a/packages/lintbase-mcp/package.json
+++ b/packages/lintbase-mcp/package.json
@@ -1,6 +1,7 @@
 {
     "name": "lintbase-mcp",
-    "version": "0.1.1",
+    "version": "0.1.2",
+    "mcpName": "io.github.Madia333/lintbase-mcp",
     "description": "MCP server for LintBase — give AI coding agents real-time database schema context.",
     "main": "dist/server.js",
     "bin": {
